--- a/templates/home.html
+++ b/templates/home.html
@@ -33,9 +33,10 @@ if ( ! isset($class) ) {
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="https://github.com/muffinista/gophper-proxy">Code</a></li>
-        <li class="theme-wrapper"><a href="#" class="theme-switcher">Theme: <span>modern</span></a></li>
       </ul>
-	    <form class="gopher-uri">
+
+      <div class="theme-wrapper"><a href="#" class="theme-switcher">Theme: <span>modern</span></a></div>
+      <form class="gopher-uri">
 	      <input type="text" name="uri" placeholder="URL" />
 	      <button type="submit" class="button">go</button>
 	    </form>
