--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@ if ( ! isset($class) ) {
         <li class="name">
           <h1><a href="/"><?php echo $title; ?></a></h1>
         </li>
-        <li class="active"><a href="/">Home</a></li>
+        <!-- <li class="active"><a href="/">Home</a></li> -->
         <li><a href="/about">About</a></li>
         <li><a href="https://github.com/muffinista/gophper-proxy">Code</a></li>
       </ul>
