--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <?php
-//$title = getenv("GOPHER_TITLE");
-
-$title = 'Gophper';
+$title = getenv("GOPHER_TITLE");
+$about_path = getenv("GOPHER_ABOUT_URL");
+$description = getenv("GOPHER_DESCRIPTION");
 
 // class default for gopher intro
 if ( ! isset($class) ) {
@@ -14,7 +14,7 @@ if ( ! isset($class) ) {
     <meta charset="utf-8">
     <title><?php echo $title ?></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="<?php echo $description; ?>">
     <meta name="author" content="">
 
     <link href="/assets/css/gophper.css" media="screen, projector, print" rel="stylesheet" type="text/css" />
@@ -30,9 +30,7 @@ if ( ! isset($class) ) {
         <li class="name">
           <h1><a href="/"><?php echo $title; ?></a></h1>
         </li>
-        <!-- <li class="active"><a href="/">Home</a></li> -->
-        <li><a href="/about">About</a></li>
-        <li><a href="https://github.com/muffinista/gophper-proxy">Code</a></li>
+        <li><a href="<?php echo $about_path; ?>">About</a></li>
       </ul>
 
       <div class="theme-wrapper"><a href="#" class="theme-switcher">Theme: <span>modern</span></a></div>
