--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -8,10 +8,7 @@
     <meta name="author" content="">
 
     <link href="{{ asset('css/gophper.css') }}" media="screen, projector, print" rel="stylesheet" type="text/css" />
-    <link href="{{ asset('css/glyphs.css') }}" rel="stylesheet">
-    <link href="{{ asset('css/colorbox.css') }}" rel="stylesheet">
-    <style>
-    </style>
+    <base href="./" />
   </head>
 
   <body>
@@ -23,7 +20,6 @@
         <li><a href="{{ about_path }}">About</a></li>
       </ul>
 
-      <div class="theme-wrapper"><a href="#" class="theme-switcher">Theme: <span>modern</span></a></div>
       <form class="gopher-uri">
 	      <input type="text" name="uri" placeholder="URL" />
 	      <button type="submit" class="button">go</button>
@@ -31,21 +27,31 @@
     </nav>
 
     <div class="container">
-	    <div id="breadcrumb"></div>
+	    <div id="breadcrumb">
+        {% if breadcrumb is defined %}
+          <ul>
+            {% for chunk in breadcrumb %}
+              <li><a href="{{ chunk.href }}">{{ chunk.value }}</a></li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      </div>
       <main>
-	      <div id="spinner" class="hide">
-	        <img src="/img/spinner.gif" />
-	      </div>
-        
+        {% if intro is defined %}
 	      <div id="intro" class="<?php echo $class ?>">
-          <?php
-          if ( isset($file) ) {
-            include_once($file); 
-          }
-          ?>
+          {{ intro|raw }}
         </div>
+        {% endif %}
         
-	      <div id="gopher">{{ data }}</div>
+        <div id="gopher" {% if image is defined %}data-parse="false"{% endif %}>
+          {% if image is defined %}
+            <img src="data:image/png;base64,{{ image }}" />
+          {% endif %}
+
+          {% if data is defined %}
+    	      {{ data }}
+          {% endif %}
+        </div>
       </main>
       
       <footer id="footer">
@@ -57,20 +63,56 @@
     </div>
     
     <script src="{{ asset('js/gopher.js') }}"></script>
-    <script src="{{ asset('js/site.js') }}"></script>
 
-    <template id="row-link-template"><div class="row"><i class="icon"></i><a href=""></a></div></template>
-    <template id="row-text-template"><div class="row"><i class="icon"></i><span></span></div></template>
-    <template id="row-form-template"><div class="row"><i class="icon"></i><form method="post" action="" class="form-inline">
+    <template id="row-link-template"><div class="row link"><svg class="icon shape-codepen"><use xlink:href="#icon-exclamation-sign"></use></svg><a href=""></a></div></template>
+    <template id="row-text-template"><div class="row text"><span></span></div></template>
+    <template id="row-form-template"><div class="row form"><svg class="icon shape-codepen"><use xlink:href="#icon-exclamation-sign"></use></svg><form method="post" action="" class="form-inline">
         <input name='text' class='gopher' placeholder='input' />
         <button type="submit">Go!</button>
       </form></div></template>
 
 
+    <svg class="icons">
+      <defs>
+        <g id="icon-exclamation-sign" width="16" height="16" fill="currentColor" class="bi bi-exclamation-circle">
+          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+          <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
+        </g>
+        <g id="icon-folder-open" width="16" height="16" fill="currentColor" class="bi bi-folder2-open">
+          <path d="M1 3.5A1.5 1.5 0 0 1 2.5 2h2.764c.958 0 1.76.56 2.311 1.184C7.985 3.648 8.48 4 9 4h4.5A1.5 1.5 0 0 1 15 5.5v.64c.57.265.94.876.856 1.546l-.64 5.124A2.5 2.5 0 0 1 12.733 15H3.266a2.5 2.5 0 0 1-2.481-2.19l-.64-5.124A1.5 1.5 0 0 1 1 6.14V3.5zM2 6h12v-.5a.5.5 0 0 0-.5-.5H9c-.964 0-1.71-.629-2.174-1.154C6.374 3.334 5.82 3 5.264 3H2.5a.5.5 0 0 0-.5.5V6zm-.367 1a.5.5 0 0 0-.496.562l.64 5.124A1.5 1.5 0 0 0 3.266 14h9.468a1.5 1.5 0 0 0 1.489-1.314l.64-5.124A.5.5 0 0 0 14.367 7H1.633z"/>
+        </g>
+        <g id="icon-file" width="16" height="16" fill="currentColor" class="bi bi-file-earmark">
+          <path d="M14 4.5V14a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h5.5L14 4.5zm-3 0A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4.5h-2z"/>
+        </g>
+        <g id="icon-download-alt" width="16" height="16" fill="currentColor" class="bi bi-download">
+          <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+          <path d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+        </g>
 
-    <style>
-      div.row {
-        display: block;
-      }
+        <g id="icon-bookmark" width="16" height="16" fill="currentColor" class="bi bi-bookmark">
+          <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
+        </g>
+
+        <g id="icon-search" width="16" height="16" fill="currentColor" class="bi bi-search">
+          <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+        </g>
+
+        <g id="icon-picture" width="16" height="16" fill="currentColor" class="bi bi-image">
+          <path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/>
+          <path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"/>
+        </g>
+
+        <g id="icon-music" width="16" height="16" fill="currentColor" class="bi bi-music-note-beamed">
+          <path d="M6 13c0 1.105-1.12 2-2.5 2S1 14.105 1 13c0-1.104 1.12-2 2.5-2s2.5.896 2.5 2zm9-2c0 1.105-1.12 2-2.5 2s-2.5-.895-2.5-2 1.12-2 2.5-2 2.5.895 2.5 2z"/>
+          <path fill-rule="evenodd" d="M14 11V2h1v9h-1zM6 3v10H5V3h1z"/>
+          <path d="M5 2.905a1 1 0 0 1 .9-.995l8-.8a1 1 0 0 1 1.1.995V3L5 4V2.905z"/>
+        </g>
+
+        <g id="" width="16" height="16" fill="currentColor" class="bi bi-question-circle">
+          <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+          <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
+        </g>
+      </defs>
+    </svg>
   </body>
 </html>
